--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Privacy Policy - Career Journal</title>
+    <title>Privacy Policy - Briefly</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
@@ -26,11 +26,11 @@
     </style>
 </head>
 <body>
-    <h1>Privacy Policy for Career Journal</h1>
+    <h1>Privacy Policy for Briefly</h1>
     <p class="last-updated"><strong>Last Updated: January 18, 2026</strong></p>
 
     <h2>Introduction</h2>
-    <p>Career Journal ("we", "our", or "us") respects your privacy and is committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you use our mobile application.</p>
+    <p>Briefly ("we", "our", or "us") respects your privacy and is committed to protecting your personal data. This privacy policy explains how we collect, use, and safeguard your information when you use our mobile application.</p>
 
     <h2>Information We Collect</h2>
     
@@ -50,7 +50,7 @@
     <h2>How We Use Your Information</h2>
     <p>We use your information to:</p>
     <ul>
-        <li>Provide and maintain the Career Journal service</li>
+        <li>Provide and maintain the Briefly service</li>
         <li>Generate AI-powered career summaries based on your journal entries</li>
         <li>Sync your data across your devices</li>
         <li>Send optional notifications based on your preferences</li>
@@ -77,7 +77,7 @@
     </ul>
 
     <h2>AI-Powered Features</h2>
-    <p>Career Journal uses OpenAI's GPT models to generate career summaries based on your journal entries. When you request a summary:</p>
+    <p>Briefly uses OpenAI's GPT models to generate career summaries based on your journal entries. When you request a summary:</p>
     <ul>
         <li>Your journal entries are sent to OpenAI's API for processing</li>
         <li>OpenAI processes this data to generate personalized career insights</li>
@@ -122,14 +122,14 @@
     </ul>
 
     <h2>Children's Privacy</h2>
-    <p>Career Journal is not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13.</p>
+    <p>Briefly is not intended for children under 13 years of age. We do not knowingly collect personal information from children under 13.</p>
 
     <h2>Changes to This Privacy Policy</h2>
     <p>We may update this privacy policy from time to time. We will notify you of any changes by updating the "Last Updated" date at the top of this policy. Continued use of the app after changes constitutes acceptance of the updated policy.</p>
 
     <h2>Contact Us</h2>
     <p>If you have questions about this Privacy Policy or our data practices, please contact us at:</p>
-    <p><strong>Email</strong>: support@careerjournal.app</p>
+    <p><strong>Email</strong>: support@getbriefly.app</p>
 
     <hr>
 
