--- a/terms.html
+++ b/terms.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Career Journal</title>
+    <title>Terms of Service - Briefly</title>
     <style>
         body {
             font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Helvetica, Arial, sans-serif;
@@ -26,14 +26,14 @@
     </style>
 </head>
 <body>
-    <h1>Terms of Service for Career Journal</h1>
+    <h1>Terms of Service for Briefly</h1>
     <p class="last-updated"><strong>Last Updated: January 18, 2026</strong></p>
 
     <h2>1. Acceptance of Terms</h2>
-    <p>By downloading, installing, or using Career Journal ("the App"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, do not use the App.</p>
+    <p>By downloading, installing, or using Briefly ("the App"), you agree to be bound by these Terms of Service ("Terms"). If you do not agree to these Terms, do not use the App.</p>
 
     <h2>2. Description of Service</h2>
-    <p>Career Journal is a mobile application that allows users to:</p>
+    <p>Briefly is a mobile application that allows users to:</p>
     <ul>
         <li>Create and manage career journal entries</li>
         <li>Track professional accomplishments and growth</li>
@@ -71,7 +71,6 @@
     <h3>4.2 Paid Subscriptions</h3>
     <ul>
         <li><strong>Monthly Subscription</strong>: $1.99 per month, auto-renews monthly</li>
-        <li><strong>Yearly Subscription</strong>: $17.99 per year, auto-renews annually</li>
     </ul>
 
     <h3>4.3 Payment and Billing</h3>
@@ -183,7 +182,7 @@
 
     <h3>9.1 App Ownership</h3>
     <ul>
-        <li>The App, including its design, code, features, and trademarks, is owned by Career Journal</li>
+        <li>The App, including its design, code, features, and trademarks, is owned by Briefly</li>
         <li>These Terms do not grant you any ownership rights to the App</li>
     </ul>
 
@@ -213,7 +212,7 @@
     <p>OUR TOTAL LIABILITY SHALL NOT EXCEED THE AMOUNT YOU PAID IN THE PAST 12 MONTHS</p>
 
     <h2>11. Indemnification</h2>
-    <p>You agree to indemnify and hold harmless Career Journal, its affiliates, and their respective officers, directors, and employees from any claims, damages, losses, or expenses (including legal fees) arising from:</p>
+    <p>You agree to indemnify and hold harmless Briefly, its affiliates, and their respective officers, directors, and employees from any claims, damages, losses, or expenses (including legal fees) arising from:</p>
     <ul>
         <li>Your use of the App</li>
         <li>Your violation of these Terms</li>
@@ -276,7 +275,7 @@
     <h2>16. Miscellaneous</h2>
 
     <h3>16.1 Entire Agreement</h3>
-    <p>These Terms, together with the Privacy Policy, constitute the entire agreement between you and Career Journal.</p>
+    <p>These Terms, together with the Privacy Policy, constitute the entire agreement between you and Briefly.</p>
 
     <h3>16.2 Severability</h3>
     <p>If any provision of these Terms is found to be invalid or unenforceable, the remaining provisions shall remain in effect.</p>
@@ -292,10 +291,10 @@
 
     <h2>17. Contact Information</h2>
     <p>If you have questions about these Terms, please contact us at:</p>
-    <p><strong>Email</strong>: support@careerjournal.app</p>
+    <p><strong>Email</strong>: support@getbriefly.app</p>
 
     <hr>
 
-    <p><strong>Acknowledgment</strong>: By using Career Journal, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service and our Privacy Policy.</p>
+    <p><strong>Acknowledgment</strong>: By using Briefly, you acknowledge that you have read, understood, and agree to be bound by these Terms of Service and our Privacy Policy.</p>
 </body>
 </html>
